--- a/show.ipynb
+++ b/show.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,14 @@
     "    utm_x = f.readlines()\n",
     "\n",
     "for i in range(len(utm_x)):\n",
-    "    utm_x[i]= utm_x[i].split(\" \")\n",
-    "    utm_x[i][1] = utm_x[i][1].replace(\"\\n\",\"\")\n",
+    "    \n",
+    "    utm_x[i] = utm_x[i].replace(\"\\n\",\"\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,13 +37,30 @@
     "    utm_y = f.readlines()\n",
     "\n",
     "for i in range(len(utm_y)):\n",
-    "    utm_y[i]= utm_y[i].split(\" \")\n",
-    "    utm_y[i][1] = utm_y[i][1].replace(\"\\n\",\"\")"
+    "    \n",
+    "    utm_y[i] = utm_y[i].replace(\"\\n\",\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "163 163\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(utm_x), len(utm_y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +69,7 @@
        "<function matplotlib.pyplot.show(*args, **kw)>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -73,9 +90,9 @@
     "x=[]\n",
     "y=[]\n",
     "for i in range(len(utm_x)):\n",
-    "    x.append(float(utm_x[i][0]))\n",
+    "    x.append(float(utm_x[i]))\n",
     "for i in range(len(utm_y)):\n",
-    "    y.append(float(utm_y[i][0])) \n",
+    "    y.append(float(utm_y[i])) \n",
     "plt.figure(figsize=(20,20))\n",
     "plt.scatter(x,y)\n",
     "plt.show"
